# open-microscopy

./: Licence.txt  README.md
ATD_Hardware/: CMakeLists.txt  CMakeListsCamera.txt  CMakeListsCoarseZDrive.txt  CMakeListsCubeSlider.txt  CMakeListsFTDI.txt  CMakeListsFastLineAndI2CTest.txt  CMakeListsFilterSet.txt  CMakeListsLamp.txt  CMakeListsLaser.txt  CMakeListsLaserPowerMonitor.txt  CMakeListsOpticalPath.txt  CMakeListsPmtSet.txt  CMakeListsPowerSwitch.txt  CMakeListsScanner.txt  CMakeListsShutter.txt  CMakeListsTemperaturMonitor.txt  CMakeListsZDrive.txt  Config.h  Config.h.in
ATD_Hardware/ATD_UsbInterface/trunk/: ATD_UsbInterface_A.c  ATD_UsbInterface_A.h  GCI_I2C.cws.template  GCI_I2C.prj.template  Protocolv0.7_1.doc  Readme.doc  USB Converter Documentation1.doc
ATD_Hardware/Analyzer/trunk/: 90i_analyzer.c  90i_analyzer.h  Analyzer.cws.template  Analyzer.prj.template  analyzer.c  analyzer.h  analyzer_ui.c  analyzer_ui.h  analyzer_ui.uir  main.c  readme.txt
ATD_Hardware/ApertureStop/trunk/: 90i_aperture_stop.c  90i_aperture_stop.h  main.c
ATD_Hardware/Camera/trunk/: Camera.cds.template  camera.cws.template  camera.prj.template  config.ini  main.c  main_C8484_camera.c  main_C9100_13_camera.c  main_dummy_camera.c  main_jvc_camera.c
ATD_Hardware/CoarseZDrive/trunk/: ATD_CoarseZDrive_A.c  ATD_CoarseZDrive_A.h  ATD_CoarseZDrive_A_UI.uir  main.c
ATD_Hardware/Com Port Control/trunk/: com_port_control.c  com_port_control.h  comport_control.cws.template  comport_control.prj.template  comport_hash.c  comport_hash.h  comport_ui.h  comport_ui.uir  test.c
ATD_Hardware/Condensers/Trunk/: 90i_condensers.c  90i_condensers.h  condensers.c  condensers.h  condensers_ui.c  condensers_ui.h  condensers_ui.uir  condensers_xml.c  manual_condensers.c  manual_condensers.h
ATD_Hardware/CubeSlider/trunk/: CubeSlider.c  CubeSlider.cws.template  CubeSlider.h  CubeSliderUI.c  CubeSliderUI.h  CubeSliderUI.uir  main.c
ATD_Hardware/DataDir/: ATD_CubeSlider_A1.ini  ATD_OpticalPath_A4.ini  ATD_OpticalPath_A4_MirrorStepper_Settings.txt  ATD_OpticalPath_A5.txt  ATD_Scanner_A.ini  DummyFilterSet1.ini  FluorSettings.ini  HTS_LEDS1.txt  Manual_Z_Drive.ini  MotorMike1.ini  ObjectiveData1.ini  OpticalPathData1.ini  OpticalPathManager1.txt  Piezo_Focus1.ini  RS232CorvusStage_StageSettings.ini  RegionScanData.ini  SPC_SpcSettings.ini  V79_CHARM_12bit_x10.xml  autofocus_IR Autofocus.txt  default_lynx_camera_settings.cam  default_objective_calibration.cal  dummy_image.tif  dummy_live_image.tif  led pulse sequence2.txt
ATD_Hardware/DeviceFinder/trunk/: DeviceFinder instructions.txt  DeviceFinder.c  DeviceFinder.cws.template  DeviceFinder.h  DeviceFinder.lib  DeviceFinder.prj.template  DeviceFinder_ui.h  DeviceFinder_ui.uir
ATD_Hardware/FTDI/trunk/: ATD_CoarseZDrive_A.c  ATD_CoarseZDrive_A.h  ATD_CoarseZDrive_A_UI.h  FTDI_Utils.c  FTDI_Utils.h  main.c
ATD_Hardware/FieldStop/trunk/: 90i_epi_field_stop.c  90i_epi_field_stop.h  90i_field_stop.c  90i_field_stop.h  main.c
ATD_Hardware/FilterSet/trunk/: FilterSet.c  FilterSet.h  FilterSetUI.c  FilterSetUI.h  FilterSetUI.uir  main.c
ATD_Hardware/FilterWheel/: CMakeLists.txt
ATD_Hardware/FilterWheel/trunk/: CMakeLists.txt  FilterWheel.c  FilterWheel.h  FilterWheelUI.c
ATD_Hardware/HardwarePy/trunk/: .project  example.py  test.glade
ATD_Hardware/Intensilight/trunk/: intensilight.c  intensilight.h  intensilight_ui.c  intensilight_ui.h  intensilight_ui.uir  main.c
ATD_Hardware/Lamp/trunk/: Lamp.prj.template  lamp.c  lamp.h  main.c
ATD_Hardware/Laser/trunk/: dummy_laser.c  dummy_laser.h  laser.c  laser.h  main.c  white_light_laser.c  white_light_laser.h  white_light_laser_ui.h  white_light_laser_ui.uir
ATD_Hardware/LaserPowerMonitor/trunk/: ATD_LaserPowerMonitor_A.c  ATD_LaserPowerMonitor_A.h  ATD_LaserPowerMonitor_A_UI.h  ATD_LaserPowerMonitor_A_UI.uir  ATD_LaserPowerMonitor_LOGP.c  ATD_LaserPowerMonitor_LOGP.h  ATD_LaserPowerMonitor_LOGP_UI.h  ATD_LaserPowerMonitor_LOGP_UI.uir  LaserPowerMonitor.c  LaserPowerMonitor.h  main.c
ATD_Hardware/Objectives/trunk/: ObjectivesUI.c  ObjectivesUI.h  ObjectivesUI.uir  defines.h  main.c  microscopy_objectives.c  microscopy_objectives.h  objectives.c  objectives.cws.template  objectives.h  objectives.prj.template
ATD_Hardware/OpticalPath/trunk/: OpticalPath.c  OpticalPath.h  OpticalPathUI.c  OpticalPathUI.h  OpticalPathUI.uir  main.c
ATD_Hardware/OpticalZoom/trunk/: 90i_optical_zoom.c  90i_optical_zoom.h  main.c
ATD_Hardware/PmtSet/trunk/: PmtSet.c  PmtSet.h  PmtSetUI.c  PmtSetUI.h  PmtSetUI.uir  main.c
ATD_Hardware/Power Switch/trunk/: PowerSwitch.c  PowerSwitch.h  main.c
ATD_Hardware/PreciseExcite/trunk/: main.c  precisExcite.c  precisExcite.h  precisExcite_ui.c  precisExcite_ui.h  precisExcite_ui.uir
ATD_Hardware/SPC/trunk/: flim.c  flim.h  flim_ui.h  flim_ui.uir  spc.c  spc.h  spc_count_rates.c  spc_parameters.c  spc_scope.c  spc_stagescan.c  spc_ui.c  spc_ui.h  spc_ui.uir
ATD_Hardware/Shutter/trunk/: ShutterUI.h  ShutterUI.uir  main.c  nikon-main.c  shutter.c  shutter.cws.template  shutter.h  shutter.prj.template
ATD_Hardware/SingleRangeHardwareDevice/trunk/: single_range_hardware_device.c  single_range_hardware_device.h  single_range_hardware_device_ui.c  single_range_hardware_device_ui.h  single_range_hardware_device_ui.uir
ATD_Hardware/StagePlate/trunk/: CMakeLists.txt  StagePlate.c  StagePlate.h  StagePlateUI.c  StagePlateUI.h  StagePlateUI.uir  StagePlate_Drawing.c  StagePlate_PointSorting.c  main.c
ATD_Hardware/StepperMotor/trunk/: main.c  readme.txt
ATD_Hardware/TemperatureMonitor/trunk/: TemperatureMonitor.c  TemperatureMonitor.h  TemperatureMonitorUI.h  TemperatureMonitorUI.uir  main.c
ATD_Hardware/Z Drive/trunk/: ZDrive.c  ZDrive.h  ZDriveUI.h  ZDriveUI.uir  main.c
ATD_Hardware/cmake_modules/: FindFreeImage.cmake  GET_RESOURCE_FILES.cmake  MAKE_WINDOWS_PATH.cmake
ATD_Hardware/microscope/trunk/: HardwareDevice.c  HardwareDevice.h  HardwareTypes.h  Microscope.c  Microscope.h  MicroscopeCommon.c  MicroscopeCommon.h  MicroscopeCommonUI.c  MicroscopeUI.h  MicroscopeUI.uir  (+8 more)
(+981 files in other folders)
